--- a/src/Pages/Researchers/CreateSurvey/createsurvey.css
+++ b/src/Pages/Researchers/CreateSurvey/createsurvey.css
@@ -95,7 +95,7 @@
     width: 100%;
     background-color: rgb(255, 132, 132);
     color: var(--greens);
-    z-index: 2;
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -105,6 +105,14 @@
 }
 .create__responses.success {
     background-color: rgb(183, 255, 183);
+}
+.loadingSubmit {
+    width: 24px; 
+    height: 24px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
 }
 .fields__section {
     display: flex;
