--- a/src/Pages/Respondents/RespondentAccount/respondentAccount.css
+++ b/src/Pages/Respondents/RespondentAccount/respondentAccount.css
@@ -94,35 +94,21 @@
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-top: 0.5px solid var(--primary-color);
 }
-.active__surveys {
+.message__board {
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 8px;
     padding: 16px 24px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-top: 0.5px solid var(--primary-color);
     border-radius: 6px;
 }
-.active__surveys p {
+.board__header p {
     font-size: 0.8rem;
     color: var(--greens);
 }
-.active__surveys-list {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-.active__surveys-list > a {
-    color: #fff;
-    background-color: var(--primary-color);
-    padding: 4px 8px;
-    font-size: 0.9rem;
-    border-radius: 16px;
-    height: 32px;
-    text-align: center;
-}
+
 .respondent__card::before {
     content: "";
     position: absolute;
@@ -143,7 +129,8 @@
 }
 .respondent__dash-stats h4 {
     color: var(--greens);
-    font-weight: 700;
+    font-weight: 300;
+    font-size: 1.6rem;
 }
 .respondent__survey-counts, .referral__count {
     font-size: 3rem;
