--- a/src/Pages/Researchers/ResearcherAccount/researcheraccount.css
+++ b/src/Pages/Researchers/ResearcherAccount/researcheraccount.css
@@ -5,7 +5,7 @@
 }
 .researcher__dash {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 48px);
     padding: 32px;
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -57,8 +57,17 @@
 }
 .packages__header p {
     color: #5f5f5f;
-    font-size: 0.9rem;
-    line-height: 1;
+    font-size: 0.8rem;
+}
+.custom {
+    gap: 6px;
+    display: flex;
+    height: max-content;
+    align-items: center;
+}
+.custom a {
+    color: var(--primary-color);
+    font-size: 1rem;
 }
 .survey__packages {
     width: 100%;
@@ -96,7 +105,7 @@
     font-size: 0.9rem;
 }
 .package__description {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: #424242;
     list-style:disc;
 }
@@ -133,6 +142,7 @@
 .package a:hover {
     font-size: 0.9rem;
 }
+
 .researcher__stats {
     width: 100%;
     height: 100%;
@@ -343,7 +353,6 @@
         transform: scale(0.6);
         left: 0;
     }
-    
     .survey__packages {
         grid-template-columns: 1fr;
         gap: 32px;
@@ -353,7 +362,7 @@
         padding: 16px;
     }
     .package {
-        height: 350px;
+        min-height: 350px;
     }
     .researcher__stats {
         grid-template-columns: 1fr;
