--- a/src/Pages/Researchers/SurveyPayment/surveypayment.css
+++ b/src/Pages/Researchers/SurveyPayment/surveypayment.css
@@ -1,4 +1,5 @@
 .survey__payment {
+    position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -9,6 +10,7 @@
     gap: 12px
 }
 .payment__form {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items:flex-start;
@@ -20,6 +22,20 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     border-radius: 12px;
     background-color: #faf6fc;
+}
+.error_message {
+    position: absolute;
+    top: 4px;
+    width: calc(100% - 64px);
+    min-height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 132, 132);
+    color: #fff;
+    font-size: 0.8rem;
+    padding: 4px 12px;
+    border-radius: 6px;
 }
 .payment__header {
     width: 100%;
