--- a/src/Components/ConfirmPayment/confirmpayment.css
+++ b/src/Components/ConfirmPayment/confirmpayment.css
@@ -25,6 +25,7 @@
     align-items: center;
     gap: 16px;
 }
+
 .confirm__info img {
     width: 64px;
     height: 64px;
@@ -48,4 +49,11 @@
     color: #fff;
     border-radius: 24px;
     cursor: pointer;
+}
+.confirm__info a {
+    padding: 8px 16px;
+    background-color: var(--primary-color);
+    color: #fff;
+    border-radius: 24px;
+    font-weight: 300;
 }
