--- a/src/Pages/Researchers/SurveyPayment/surveypayment.css
+++ b/src/Pages/Researchers/SurveyPayment/surveypayment.css
@@ -9,19 +9,77 @@
     flex-direction: column;
     gap: 12px
 }
+.survey__payment-inner {
+    width: 70%;
+    height: auto;
+    background-color: #faf6fc;
+    padding: 32px;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+.payment__container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 16px;
+}
+.payment__info {
+    position: relative;
+    padding: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    border-radius: 12px;
+}
+
+.info__top h4 {
+    color: #000;
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+.package__info {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.info__item {
+    width: 100%;
+    height: max-content;
+    padding: 2px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.info__item p {
+    font-size: 0.8rem;
+    font-weight: 300;
+}
+.info__item h6 {
+    font-weight: 400;
+    font-size: 1rem;
+}
+.powered_by {
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 0.6rem;
+    font-weight: 300;
+}
+.powered_by a {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
 .payment__form {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items:flex-start;
-    flex-direction: column;
-    width: 50%;
-    height: 90%;
-    padding: 32px;
-    gap: 16px;
+    width: 100%;
+    height: 100%;
+    padding: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     border-radius: 12px;
-    background-color: #faf6fc;
 }
 .error_message {
     position: absolute;
@@ -39,8 +97,8 @@
 }
 .payment__header {
     width: 100%;
-    color: #565656;
-    border-bottom: 0.1px solid #949494;
+    color: #242424;
+    border-bottom: 0.1px solid #bfbfbf;
     padding: 0 0 16px;
 }
 .payment__header h3 {
@@ -68,6 +126,7 @@
     border-radius: 24px;
     cursor: pointer;
     transition: all 0.3s linear;
+    margin: 16px 0 0;
 }
 .payment__form button:hover {
     transform: scale(1.03);
