--- a/src/Components/ConfirmPayment/confirmpayment.css
+++ b/src/Components/ConfirmPayment/confirmpayment.css
@@ -57,3 +57,13 @@
     border-radius: 24px;
     font-weight: 300;
 }
+@media screen and (max-width: 900px) {
+    .confirm__card {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 480px) {
+    .confirm__card {
+        width: 95%;
+    }
+}
