--- a/src/Components/Expanders/expanders.css
+++ b/src/Components/Expanders/expanders.css
@@ -21,7 +21,7 @@
     font-weight: 600;
 }
 .answer {
-    color: #e5e5e5;
+    color: #d5d5d5;
     padding: 0 0 16px;
     text-align: justify;
 }
