--- a/src/Pages/SharedPages/About/about.css
+++ b/src/Pages/SharedPages/About/about.css
@@ -2,24 +2,19 @@
     width: 90%;
     height: auto;
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 1fr 2fr;
     gap: 32px;
     padding: 64px 0;
     margin: 0 auto;
     color: #424242;
 }
-.intro__bold {
-    line-height: 1.5;
-    font-size: 2.5rem;
-    color: var(--primary-color);
-    font-weight: 300;
-}
 
 .intro__light {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
-    align-items: flex-end;
+    gap: 12px;
     font-size: 1.1rem;
     text-align: justify;
 }
@@ -94,7 +89,7 @@
 }
 .about__mission {
     padding: 48px 0;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     height: auto;
     display: grid;
@@ -126,11 +121,12 @@
 }
 .info__body {
     font-size: 1rem;
+    font-weight: 300;
 }
 .about__why {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     padding: 48px 0;
     gap: 32px;
@@ -145,7 +141,7 @@
     justify-content: center;
 }
 .about__footer {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     padding: 48px 0 0;
 }
@@ -155,21 +151,21 @@
 
 @media screen and (max-width: 900px) {
     .about__intro {
-        width: 90%;
         padding: 32px 0;
+        display: flex;
+        gap: 32px;
+        flex-direction: column;
     }
     .titles {
         text-align: center;
         font-weight: 300;
     }
     .about__mission {
-        width: 90%;
         display: flex;
         gap: 32px;
         flex-direction: column;
     }
     .about__why {
-        width: 90%;
         display: flex;
         flex-direction: column;
         gap: 32px
