--- a/src/Pages/SharedPages/Home/home.css
+++ b/src/Pages/SharedPages/Home/home.css
@@ -2,11 +2,11 @@
 .afrimentary__hero {
     position: relative;
     width: 100%;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 96px);
     display: flex;
     justify-content: center;
     align-items: center;
-    clip-path: polygon(90% 0%, 100% 0%, 100% 90%, 50% 100%, 0% 90%, 0% 0%);
+    clip-path: polygon(90% 0%, 100% 0%, 100% 95%, 50% 100%, 0% 95%, 0% 0%);
 }
 .hero__bg {
     width: 100%;
@@ -33,8 +33,6 @@
     letter-spacing: 2px;
     padding: 32px;
     z-index: 4;
-    top: 30%; 
-    transform: translateY(-30%); 
 }
 .heading-primary {
     color: var(--primary-color);
@@ -48,7 +46,7 @@
 .heading-last::after {
     content: "";
     position: absolute;
-    width: 80%;
+    width: 50%;
     height: 7px;
     background-color: #dcdcdc;
     left: 50%;
@@ -58,10 +56,13 @@
 .afrimentary__brief {
     position: relative;
     padding: 48px 16px;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--greens);
     text-align: center;
+}
+.mission__brief {
+    margin: 0 auto;
 }
 .afrimentary__mission {
     position: relative;
@@ -100,7 +101,7 @@
 .how__title p {
     color: var(--primary-color);
     font-size: 2.5rem;
-    font-weight: 500;
+    font-weight: 700;
     margin: 0 0 16px;
 }
 .how__text {
@@ -174,15 +175,14 @@
 
 @media screen and (min-width: 480px) {
     .afrimentary__hero {
-        height: calc(100vh - 80px);
-        clip-path: polygon(90% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%, 0% 0%);
+        clip-path: polygon(90% 0%, 100% 0%, 100% 90%, 50% 100%, 0% 90%, 0% 0%);
     }
     .hero__heading {
         font-size: 4.5rem;
         word-spacing: 10px;
     }
     .afrimentary__brief {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         font-weight: 500;
     }
     .mission_sidebar h3 {
@@ -203,16 +203,16 @@
         font-size: 2rem;
     }
     .how__title p {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
     }
     .how__text p {
         font-size: 1.3rem;
-        font-weight: 500;
+        font-weight: 600;
         width: 40ch;
         margin: 0 auto;
     }
     .how__cta p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .afrimentary__faq {
         padding: 96px 32px;
@@ -232,14 +232,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: calc(100vh - 128px);
     }
     .hero__heading {
         font-size: 3.5rem;
         width: 80%;
     }
     .afrimentary__brief {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 400;
         height: auto;
         display: flex;
