--- a/src/Components/Notifications/notification.css
+++ b/src/Components/Notifications/notification.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    max-height: 320px;
     gap: 8px;
+    overflow-y: auto;
 }
 .notification {
     position: relative;
@@ -57,23 +58,14 @@
     font-size: 0.6rem;
     padding: 2px 8px;
 }
-.idling {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    text-align: center;
+.no_notifications .idling {
     width: 100%;
-    color: var(--primary-color);
-    font-size: 1.1rem;
-    font-weight: 500;
-    transform: translateY(-50%);
-}
-.no_notifications {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    text-align: center;
-    width: 100%;
+    height: 64px;
     font-size: 1rem;
-    transform: translateY(-50%)
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.idling {
+    color: var(--primary-color);
 }
