--- a/src/Pages/Respondents/RespondentAccount/respondentAccount.css
+++ b/src/Pages/Respondents/RespondentAccount/respondentAccount.css
@@ -1,18 +1,20 @@
 .respondent__dash {
     width: 100%;
     height: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .respondent__dash-inner {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 48px);
     padding: 32px;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    gap: 32px;
+    gap: 16px;
     position: relative;
 }
 .respondent__dash-sidebar {
+    width: 100%;
+    height: 100%;
     padding: 64px 32px;
     display: flex;
     flex-direction: column;
@@ -24,8 +26,6 @@
 .sidebar__controls {
     display: none;
 }
-
-
 /* MAIN */
 .respondent__dash-main {
     position: relative;
@@ -36,7 +36,7 @@
     border-radius: 12px;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 16px;
 }
 .dash__main-top {
     width: 100%;
@@ -75,6 +75,8 @@
     font-size: 0.7rem;
 }
 .respondent__dash-stats {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 32px;
@@ -83,10 +85,12 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+    width: 100%;
+    height: 100%;
 }
 .respondent__card {
     position: relative;
-    height: 166px;
+    height: 100%;
     width: 100%;
     border-radius: 6px;
     overflow: hidden;
@@ -94,21 +98,6 @@
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-top: 0.5px solid var(--primary-color);
 }
-.message__board {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding: 16px 24px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-    border-top: 0.5px solid var(--primary-color);
-    border-radius: 6px;
-}
-.board__header p {
-    font-size: 0.8rem;
-    color: var(--greens);
-}
-
 .respondent__card::before {
     content: "";
     position: absolute;
@@ -135,14 +124,32 @@
 .respondent__survey-counts, .referral__count {
     font-size: 3rem;
     font-weight: 700;
+} 
+.message__board {
+    width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 16px 24px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    border-top: 0.5px solid var(--primary-color);
+    border-radius: 6px;
 }
+.board__header p {
+    font-size: 0.8rem;
+    color: var(--greens);
+}
+
 
 /* Media Queries */
 
-@media screen and (max-width: 900px) {
+ @media screen and (max-width: 900px) {
    .respondent__dash-inner {
+        height: calc(100vh - 128px);
         width: 100%;
-        height: calc(100vh - 120px);
         padding: 48px 32px;
         display: grid;
         grid-template-columns: 1fr;
@@ -162,7 +169,6 @@
     .sidebar__unhide {
         left: 0;
     }
-
     .sidebar__controls {
         position: fixed;
         display: flex;
@@ -196,6 +202,20 @@
         font-size: 0.8rem;
         font-weight: 400;
     }
+    .respondent__dash-stats {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, max-content);
+    }
+    .respondent__stats {
+        width: 100%
+    }
+    .respondent__card {
+        height: auto;
+    }
+    .message__board {
+        width: 100%;
+    }
     .dash__main-controls {
         gap: 12px;
     }
@@ -207,12 +227,4 @@
         transform: scale(0.6);
         left: 0;
     }
-    .respondent__dash-stats {
-        display: flex;
-        flex-direction: column-reverse;
-        gap: 16px;
-    }
-    .respondent__card {
-        height: auto;
-    }
-}
+} 
