--- a/src/Pages/SharedPages/404/err404.css
+++ b/src/Pages/SharedPages/404/err404.css
@@ -16,7 +16,7 @@
     align-items: center;
     color: var(--greens);
     padding: 60px 32px;
-    box-shadow: 5px 5px 10px 5px #d9d9d9;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 12px;
     min-width: 50%;
   }
@@ -32,6 +32,7 @@
   .oopss .error-text p.p-a {
     font-size: 1.7rem;
     margin: 30px 0 15px;
+    text-transform: uppercase;
   }
   .oopss .error-text .back {
     background: var(--primary-color);
