--- a/src/Pages/SharedPages/Login/login.css
+++ b/src/Pages/SharedPages/Login/login.css
@@ -202,6 +202,10 @@
     color: #fff;
     cursor: pointer;
 }
+.form__submit:disabled {
+    background-color: #ffb59a;
+    cursor: not-allowed;
+}
 .submission__field {
     width: 100;
     height: auto;
