--- a/src/Pages/Researchers/ResearcherAccount/researcheraccount.css
+++ b/src/Pages/Researchers/ResearcherAccount/researcheraccount.css
@@ -12,6 +12,7 @@
     gap: 16px;
     position: relative;
 }
+
 .researcher__dash-sidebar {
     padding: 64px 32px;
     display: flex;
@@ -35,6 +36,23 @@
     display: flex;
     flex-direction: column;
     gap: 48px;
+}
+.response__messages {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 48px;
+    background-color: var(--error-color);
+    position: absolute;
+    bottom: 100%;
+    top: 0;
+    z-index: 2;
+    color: #fff;
+}
+.response__messages.success {
+    background-color: var(--success-color);
+    color: var(--greens);
 }
 .offered__packages {
     position: relative;
@@ -196,33 +214,44 @@
 .stat__section .surveys__links {
     display: flex;
     flex-direction: column;
+    gap: 4px;
     width: 100%;
     height: 100%;
 }
+.surveysLinks__container {
+    width: 100%;
+    height: 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 14px;
+}
 .stat__section .surveys__links p {
     position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
     gap: 8px;
     width: 100%;
     padding: 6px;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 400;
     transition: all 0.2s linear;
     color: #ededed;
 }
-.survey__unpaid {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+.survey__actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
     padding: 2px 6px;
+    background-color: var(--success-color);
+    color: #000;
+    font-weight: 400;
+    font-size: 0.8rem;
+    border-radius: 12px;
+    cursor: pointer;
+}
+.survey__actions.delete {
     background-color: red;
     color: #fff;
-    font-weight: 300;
-    font-size: 0.6rem;
-    border-radius: 12px;
 }
 .stat__section .surveys__links p:hover {
     color: rgb(255, 160, 101);
@@ -240,8 +269,8 @@
 }
 .survey__info h4 {
     width: 100%;
-    font-weight: 600;
-    font-size: 1.2rem;
+    font-weight: 400;
+    font-size: 0.9rem;
     text-transform: uppercase;
 }
 .responses__viz {
