--- a/src/Pages/Researchers/SurveyPayment/surveypayment.css
+++ b/src/Pages/Researchers/SurveyPayment/surveypayment.css
@@ -1,7 +1,7 @@
 .survey__payment {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 64px);
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -94,6 +94,7 @@
     font-size: 0.8rem;
     padding: 4px 12px;
     border-radius: 6px;
+    z-index: 2;
 }
 .payment__header {
     width: 100%;
