--- a/src/Pages/SharedPages/Terms/terms.css
+++ b/src/Pages/SharedPages/Terms/terms.css
@@ -1,9 +1,9 @@
 .afrimentary__terms {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     overflow: hidden;
     gap: 32px;
@@ -18,16 +18,17 @@
     left: -50%;
     bottom: -50%;
     transform: rotate(-26deg);
+    z-index: -1;
 }
 .terms_wrapper {
     position: relative;
     padding: 32px 64px 0;
     width: 80%;
-    height: 90%;
+    height: 80vh;
     background-color: #f4f4f4;
     overflow: hidden;
     border-radius: 32px;
-    z-index: 2;
+    margin: 0 0 32px;
 }
 .terms_wrapper::after {
     content: "";
